@@ -6,6 +6,7 @@ NEWS
 - 1.4.25 -
   * mod_magnet: fix pairs() for normal tables and strings (fixes #1307)
   * mod_magnet: add traceback for printing lua errors
+  * mod_rewrite: fix compile error if compiled without pcre
 
 - 1.4.24 - 2009-10-25
   * Add T_CONFIG_INT for bigger integers from the config (needed for #1966)
